updated prediction training

--- a/cluster-trace-gpu-v2020/prediction/lstm_general_prediction.ipynb
+++ b/cluster-trace-gpu-v2020/prediction/lstm_general_prediction.ipynb
@@ -81,7 +81,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "num_epochs: int = 200\n",
+    "num_epochs: int = 500\n",
     "learning_rate: float = 0.001\n",
     "\n",
     "# number of features\n",
@@ -137,7 +137,7 @@
     {
      "data": {
       "text/html": [
-       "Run data is saved locally in <code>/Users/macbook/Development/alibaba_clusterdata/cluster-trace-gpu-v2020/prediction/wandb/run-20220923_173631-39nwrnrr</code>"
+       "Run data is saved locally in <code>/Users/macbook/Development/alibaba_clusterdata/cluster-trace-gpu-v2020/prediction/wandb/run-20220926_175323-3t6p1lo7</code>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -149,7 +149,7 @@
     {
      "data": {
       "text/html": [
-       "Syncing run <strong><a href=\"https://wandb.ai/my-god-its-full-of-stars/Hardware%20Utilization%20Prediction/runs/39nwrnrr\" target=\"_blank\">genial-wood-111</a></strong> to <a href=\"https://wandb.ai/my-god-its-full-of-stars/Hardware%20Utilization%20Prediction\" target=\"_blank\">Weights & Biases</a> (<a href=\"https://wandb.me/run\" target=\"_blank\">docs</a>)<br/>"
+       "Syncing run <strong><a href=\"https://wandb.ai/my-god-its-full-of-stars/Hardware%20Utilization%20Prediction/runs/3t6p1lo7\" target=\"_blank\">zesty-cherry-26</a></strong> to <a href=\"https://wandb.ai/my-god-its-full-of-stars/Hardware%20Utilization%20Prediction\" target=\"_blank\">Weights & Biases</a> (<a href=\"https://wandb.me/run\" target=\"_blank\">docs</a>)<br/>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -179,7 +179,7 @@
     {
      "data": {
       "text/plain": [
-       "<wandb.sdk.wandb_metric.Metric at 0x15272e5e0>"
+       "<wandb.sdk.wandb_metric.Metric at 0x160385070>"
       ]
      },
      "execution_count": 6,
@@ -256,19 +256,10 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/macbook/opt/miniconda3/envs/ml_pytorch/lib/python3.9/site-packages/torch/nn/_reduction.py:42: UserWarning: size_average and reduce args will be deprecated, please use reduction='mean' instead.\n",
-      "  warnings.warn(warning.format(ret))\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# mean square error for regression\n",
-    "criterion = nn.MSELoss(size_average=10)\n",
+    "criterion = nn.MSELoss()\n",
     "criterion = criterion.to(get_device())\n",
     "# criterion = RMSELoss()\n",
     "# criterion = criterion.to(device)\n",
@@ -278,13 +269,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "def log_training_metrics(predictions, labels, loss):\n",
     "    # logging to wandb\n",
-    "    if get_device_as_string() == 'cuda':\n",
+    "    if get_device_as_string() == 'cuda' or get_device_as_string() == 'mps':\n",
     "        o = predictions.cpu().detach().numpy()\n",
     "        l = labels.cpu().detach().numpy()\n",
     "    else:\n",
@@ -302,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,27 +315,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Training Loop: 100%|██████████| 30/30 [05:59<00:00, 11.97s/it]\n"
+      "Training Loop:   0%|          | 2/500 [00:33<2:18:57, 16.74s/it]"
      ]
     }
    ],
    "source": [
-    "train_loader = DataLoader(dataset, batch_size=batch_size, shuffle=False, num_workers=8)\n",
+    "train_loader = DataLoader(dataset, batch_size=batch_size, shuffle=True, num_workers=8)\n",
     "is_shuffle = False\n",
     "\n",
     "for epoch in tqdm(range(0, num_epochs), desc=\"Training Loop\"):\n",
     "\n",
-    "    if epoch % 10 == 0:\n",
-    "        reorder_dataset(dataset, batch_size)\n",
-    "        train_loader = DataLoader(dataset, batch_size=batch_size, shuffle=False, num_workers=8)\n",
-    "        # is_shuffle = not is_shuffle\n",
+    "    # if epoch % 10 == 0:\n",
+    "    #     reorder_dataset(dataset, batch_size)\n",
+    "    #     train_loader = DataLoader(dataset, batch_size=batch_size, shuffle=False, num_workers=8)\n",
+    "    #     # is_shuffle = not is_shuffle\n",
     "    \n",
     "    for _, (inputs, labels) in enumerate(train_loader):\n",
     "        inputs, labels = inputs.to(device), labels.to(device)\n",
@@ -362,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -392,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -416,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -424,7 +415,7 @@
     "X_df = X_df.to(device)\n",
     "# forward pass\n",
     "prediction = lstm(X_df)\n",
-    "if get_device_as_string() == 'cuda':\n",
+    "if get_device_as_string() == 'cuda' or get_device_as_string() == 'mps':\n",
     "    prediction = prediction.cpu().data.numpy()\n",
     "else:\n",
     "    prediction = prediction.data.numpy()\n",
@@ -453,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -482,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -502,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -549,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -571,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -589,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -598,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -629,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -649,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -669,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -691,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
