Renamed imported dataset

--- a/cluster-trace-gpu-v2020/prediction/lstm_general_prediction.ipynb
+++ b/cluster-trace-gpu-v2020/prediction/lstm_general_prediction.ipynb
@@ -16,7 +16,7 @@
    ],
    "source": [
     "from lstm_models import LSTM\n",
-    "from gpu_dataloader import GPUDataset\n",
+    "from gpu_dataloader import ForecastDataset\n",
     "from torch.utils.data import DataLoader, SubsetRandomSampler\n",
     "import torch.nn as nn\n",
     "import torch\n",
