--- a/cluster-trace-gpu-v2020/prediction/lstm_general_prediction.ipynb
+++ b/cluster-trace-gpu-v2020/prediction/lstm_general_prediction.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/chrispy/miniconda3/envs/ml_pytorch/lib/python3.9/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from lstm_models import LSTM\n",
     "from gpu_dataloader import ForecastDataset, UtilizationDataset\n",
@@ -38,46 +29,23 @@
     "import numpy as np\n",
     "%matplotlib inline\n",
     "\n",
-    "from utils import get_device_as_string, get_device"
+    "from utils import get_device_as_string, get_device, get_rmse, get_mape, get_mae"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import math\n",
-    "\n",
-    "def get_rmse(actual_values, predicted_values) -> float:\n",
-    "    '''returns the root mean squared error'''\n",
-    "    return math.sqrt(mean_squared_error(actual_values, predicted_values))\n",
-    "\n",
-    "\n",
-    "def get_mape(actual_values, predicted_values):\n",
-    "    '''returns the mean absolue percentage error'''\n",
-    "    return np.mean(np.abs(actual_values - predicted_values) / np.abs(actual_values) * 100)\n",
-    "\n",
-    "\n",
-    "def get_mae(actual_values, predicted_values) -> float:\n",
-    "    '''returns the mean absolute error'''\n",
-    "    return mean_absolute_error(actual_values, predicted_values)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "batch_size: int = 1000\n",
-    "dataset = UtilizationDataset(small_df=False, batch_size=batch_size)\n",
+    "dataset = UtilizationDataset(small_df=True, batch_size=batch_size)\n",
     "test_set = UtilizationDataset(is_training=False, small_df=True, batch_size=batch_size)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,11 +56,12 @@
     "# number of features\n",
     "input_size: int = dataset.X.shape[2]\n",
     "# number of features in hidden state\n",
-    "hidden_size: int = dataset.X.shape[2] * 320\n",
+    "hidden_size: int = dataset.X.shape[2] * 500\n",
     "# number of stacked lstm layers\n",
     "num_layers: int = 2\n",
     "# number of output classes\n",
     "num_classes: int = dataset.y.shape[1]\n",
+    "seq_length: int = dataset.X.shape[1]\n",
     "\n",
     "device = get_device()\n",
     "\n",
@@ -101,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,30 +104,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "LSTM(\n",
-       "  (init_linear): Linear(in_features=2, out_features=2, bias=True)\n",
-       "  (lstm): LSTM(2, 640, batch_first=True)\n",
-       "  (dropout): Dropout(p=0.4, inplace=False)\n",
-       "  (fc_1): Linear(in_features=640, out_features=512, bias=True)\n",
-       "  (fc_2): Linear(in_features=512, out_features=256, bias=True)\n",
-       "  (fc_3): Linear(in_features=256, out_features=1, bias=True)\n",
-       "  (relu): LeakyReLU(negative_slope=0.01)\n",
-       ")"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "lstm = LSTM(num_classes, input_size, hidden_size, num_layers, dataset.X.shape[1], bidirectional=bidirectional)\n",
+    "lstm = LSTM(num_classes, input_size, hidden_size, num_layers, seq_length, bidirectional=bidirectional)\n",
     "lstm.train()\n",
     "\n",
     "# log gradients and model parameters\n",
@@ -170,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,27 +186,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Training Loop -- Loss: 0.0211:  19%|█▉        | 19/100 [02:54<12:26,  9.22s/it]"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "train_loader = DataLoader(dataset, batch_size=batch_size, shuffle=False, num_workers=10)\n",
     "\n",
     "loss_val = None\n",
     "loss_progression: list = []\n",
-    "for epoch in (pbar := tqdm(range(0, num_epochs), desc=f'Training Loop -- Loss: {loss_val}')):\n",
+    "for epoch in (pbar := tqdm(range(0, num_epochs), desc=f'Training Loop (0) -- Loss: {loss_val}')):\n",
     "\n",
     "    if epoch == (num_epochs // 2):\n",
-    "        reorder_dataset(dataset, batch_size)\n",
+    "        reorder_dataset(dataset, batch_size // 2)\n",
     "        train_loader = DataLoader(dataset, batch_size=batch_size, shuffle=False, num_workers=8)\n",
     "    \n",
     "    for _, (inputs, labels) in enumerate(train_loader):\n",
@@ -275,7 +217,7 @@
     "        log_training_metrics(predictions, labels, loss)\n",
     "    loss_val = loss.item()\n",
     "    loss_progression.append(loss_val)\n",
-    "    pbar.set_description(f'Training Loop -- Loss: {loss_val:.4f}')\n",
+    "    pbar.set_description(f'Training Loop ({epoch + 1}) -- Loss: {loss_val:.4f}')\n",
     "    \n",
     "    with torch.no_grad():\n",
     "        val_pred = lstm(test_set.X.to(device))\n",
@@ -330,8 +272,10 @@
     "        'hidden_size': hidden_size,\n",
     "        'num_layers': num_layers,\n",
     "        'num_classes': num_classes,\n",
+    "        'seq_length': seq_length,\n",
     "        'model_state_dict': lstm.state_dict(),\n",
     "        'optimizer_state_dict': optimizer.state_dict(),\n",
+    "        \n",
     "    },\n",
     "    f'{model_name}'\n",
     ")\n"
@@ -350,7 +294,6 @@
     "# prediction = prediction.reshape(1, -1)\n",
     "if torch.has_cuda or torch.has_mps:\n",
     "    prediction = prediction.cpu().detach().numpy()\n",
-    "\n",
     "else:\n",
     "    prediction = prediction.data.numpy()\n",
     "\n",
@@ -359,7 +302,6 @@
     "\n",
     "# create dataframes\n",
     "prediction_df = pd.DataFrame(prediction, columns=label_columns)\n",
-    "bla = pd.DataFrame(dataset.X.data.numpy().squeeze(), columns=dataset._get_feature_columns())\n",
     "actual_data_df = pd.DataFrame(actual_data, columns=label_columns)\n",
     "\n",
     "# reverse transformation\n",
@@ -662,7 +604,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.13 ('ml_pytorch')",
+   "display_name": "Python 3.9.12 ('ml_pytorch')",
    "language": "python",
    "name": "python3"
   },
@@ -676,12 +618,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.12"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "631fa29ff452e796f5703a13b9a25aaedc38e1bbca43d17166395e7a7dc8b7e5"
+    "hash": "bc289c9585466324d6bcd715c701435d361dd4760f0e3d7325b29a75549769c1"
    }
   }
  },
