Added source to notebook

--- a/cluster-trace-gpu-v2020/prediction/evaluate_paper_lstm.ipynb
+++ b/cluster-trace-gpu-v2020/prediction/evaluate_paper_lstm.ipynb
@@ -15,7 +15,8 @@
     "                                     Multiply, Reshape, Subtract,\n",
     "                                     TimeDistributed)\n",
     "from tensorflow.keras.utils import plot_model\n",
-    "\n"
+    "\n",
+    "# https://www.tensorflow.org/guide/keras/train_and_evaluate"
    ]
   },
   {
@@ -149,6 +150,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Tensorflow Error Output\n",
+    "\n",
     "![tf-error](./figures/tensorflow_error_output.png)"
    ]
   }
