Updated general prediction notebook

--- a/cluster-trace-gpu-v2020/prediction/lstm_general_prediction.ipynb
+++ b/cluster-trace-gpu-v2020/prediction/lstm_general_prediction.ipynb
@@ -49,14 +49,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "num_epochs: int = 10\n",
+    "num_epochs: int = 100\n",
     "learning_rate: float = 1e-3\n",
     "bidirectional = False\n",
     "\n",
     "# number of features\n",
     "input_size: int = dataset.X.shape[2]\n",
     "# number of features in hidden state\n",
-    "hidden_size: int = dataset.X.shape[2] * 1000\n",
+    "# hidden_size: int = dataset.X.shape[2] * 1000\n",
+    "hidden_size: int = 5000\n",
     "# number of stacked lstm layers\n",
     "num_layers: int = 3\n",
     "# number of output classes\n",
