--- a/cluster-trace-gpu-v2020/prediction/lstm_general_prediction.ipynb
+++ b/cluster-trace-gpu-v2020/prediction/lstm_general_prediction.ipynb
@@ -222,16 +222,17 @@
     "    #     train_loader = DataLoader(dataset, batch_size=batch_size, shuffle=False, num_workers=8)\n",
     "    \n",
     "    for _, (inputs, labels) in enumerate(train_loader):\n",
+    "        # send input and label to device\n",
     "        inputs, labels = inputs.to(device), labels.to(device)\n",
     "        \n",
-    "\n",
+    "        # forward input to model\n",
     "        predictions = lstm(inputs).to(device)\n",
-    "        print(predictions.shape)\n",
     "\n",
     "        optimizer.zero_grad()\n",
     "        loss = criterion(predictions, labels)\n",
-    "        \n",
+    "        # backward propagation\n",
     "        loss.backward()\n",
+    "        # update weights\n",
     "        optimizer.step()\n",
     "        \n",
     "        \n",
@@ -637,16 +638,6 @@
    "source": [
     "for idx in range(0, len(label_columns)):\n",
     "    plot_column(actual_values=actual_data_df, predicted_values=prediction_df, column_number=idx)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# start_idx, end_idx = 9000, 10000\n",
-    "# plot_column(actual_values=actual_data_df[start_idx:end_idx], predicted_values=prediction_df[start_idx:end_idx], column_number=0)"
    ]
   }
  ],
