Added lstm_config to general prediction notebook

--- a/cluster-trace-gpu-v2020/prediction/lstm_general_prediction.ipynb
+++ b/cluster-trace-gpu-v2020/prediction/lstm_general_prediction.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/macbook/opt/miniconda3/envs/ml_pytorch/lib/python3.9/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "from lstm_models import LSTM, UtilizationLSTM\n",
     "from gpu_dataloader import ForecastDataset, UtilizationDataset\n",
@@ -34,32 +43,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'dataset': {'small_df': True, 'include_tasks': False, 'batch_size': 500}, 'model': {'name': 'Utilization LSTM Model without Tasks', 'num_epochs': 100, 'learning_rate': 0.0001, 'hidden_size': 3000, 'num_layers': 2, 'scheduler': {'patience': 50, 'factor': 0.5, 'min_lr': 1e-05, 'eps': 1e-09}}, 'save_path': {'save_to_file': False, 'training_prediction_path': '', 'test_prediction_path': ''}}\n"
+     ]
+    }
+   ],
    "source": [
-    "batch_size: int = 250\n",
-    "dataset = UtilizationDataset(small_df=True, include_tasks=False)\n",
-    "test_set = UtilizationDataset(is_training=False, small_df=True, include_tasks=False)"
+    "import yaml\n",
+    "from yaml.loader import SafeLoader\n",
+    "\n",
+    "# Open the file and load the file\n",
+    "with open('./model_configs/utilization_no_tasks.yaml') as f:\n",
+    "    yaml_config = yaml.load(f, Loader=SafeLoader)\n",
+    "    print(yaml_config)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'small_df': True, 'include_tasks': False, 'batch_size': 500}"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "yaml_config['dataset']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "num_epochs: int = 15\n",
-    "learning_rate: float = 1e-3\n",
-    "bidirectional = False\n",
+    "batch_size: int = yaml_config['dataset']['batch_size']\n",
+    "small_df: bool = yaml_config['dataset']['small_df']\n",
+    "include_tasks: bool = yaml_config['dataset']['include_tasks']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "dataset = UtilizationDataset(small_df=small_df, include_tasks=include_tasks)\n",
+    "test_set = UtilizationDataset(is_training=False, small_df=small_df, include_tasks=include_tasks)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num_epochs: int = yaml_config['model']['num_epochs']\n",
+    "learning_rate: float = yaml_config['model']['learning_rate']\n",
     "\n",
     "# number of features\n",
     "input_size: int = dataset.X.shape[2]\n",
     "# number of features in hidden state\n",
     "# hidden_size: int = dataset.X.shape[2] * 1000\n",
-    "hidden_size: int = 3000\n",
+    "hidden_size: int = yaml_config['model']['hidden_size']\n",
     "# number of stacked lstm layers\n",
-    "num_layers: int = 2\n",
+    "num_layers: int = yaml_config['model']['num_layers']\n",
     "# number of output classes\n",
     "num_classes: int = dataset.y.shape[1]\n",
     "seq_length: int = dataset.X.shape[1]\n",
@@ -75,18 +137,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset.y.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "if INCLUDE_WANDB == True:\n",
     "    import wandb\n",
-    "    wandb.init(project='Hardware Utilization Prediction')\n",
+    "    wandb.init(project=yaml_config['model']['name'])\n",
     "\n",
     "    wandb.config.num_epochs = num_epochs\n",
     "    wandb.config.learning_rate = learning_rate\n",
@@ -144,8 +197,10 @@
     "# optimizer function\n",
     "optimizer = torch.optim.AdamW(lstm.parameters(), lr=learning_rate)\n",
     "\n",
+    "scheduler_config = yaml_config['model']['scheduler']\n",
+    "\n",
     "scheduler = torch.optim.lr_scheduler.ReduceLROnPlateau(\n",
-    "    optimizer, patience=50, factor=0.5, min_lr=1e-4, eps=1e-08)\n"
+    "    optimizer, patience=scheduler_config['patience'], factor=scheduler_config['factor'], min_lr=scheduler_config['min_lr'], eps=scheduler_config['eps'])\n"
    ]
   },
   {
@@ -294,23 +349,24 @@
    "outputs": [],
    "source": [
     "lstm.eval()\n",
-    "model_name = f'models/epochs-{num_epochs}-{current_time}'\n",
     "\n",
-    "torch.save(\n",
-    "    {\n",
-    "        'epoch': num_epochs,\n",
-    "        'learning_rate': learning_rate,\n",
-    "        'input_size': input_size,\n",
-    "        'hidden_size': hidden_size,\n",
-    "        'num_layers': num_layers,\n",
-    "        'num_classes': num_classes,\n",
-    "        'seq_length': seq_length,\n",
-    "        'model_state_dict': lstm.state_dict(),\n",
-    "        'optimizer_state_dict': optimizer.state_dict(),\n",
-    "        \n",
-    "    },\n",
-    "    f'{model_name}'\n",
-    ")\n"
+    "if yaml_config['model']['save_model']:\n",
+    "    model_name = f'models/epochs-{num_epochs}-{current_time}'\n",
+    "    torch.save(\n",
+    "        {\n",
+    "            'epoch': num_epochs,\n",
+    "            'learning_rate': learning_rate,\n",
+    "            'input_size': input_size,\n",
+    "            'hidden_size': hidden_size,\n",
+    "            'num_layers': num_layers,\n",
+    "            'num_classes': num_classes,\n",
+    "            'seq_length': seq_length,\n",
+    "            'model_state_dict': lstm.state_dict(),\n",
+    "            'optimizer_state_dict': optimizer.state_dict(),\n",
+    "            \n",
+    "        },\n",
+    "        f'{model_name}'\n",
+    "    )\n"
    ]
   },
   {
@@ -363,7 +419,30 @@
     "# combined_df.rename()\n",
     "combined_df['plan_cpu'] = plan_df\n",
     "\n",
-    "combined_df = combined_df.rename(columns={'cpu_usage_x': 'actual cpu usage', 'cpu_usage_y': 'predicted cpu usage', 'plan_cpu': 'allocated cpu'})\n"
+    "combined_df = combined_df.rename(columns={'cpu_usage_x': 'actual cpu usage', 'cpu_usage_y': 'predicted cpu usage', 'plan_cpu': 'allocated cpu'})\n",
+    "\n",
+    "if yaml_config['evaluation_path']['save_to_file']:\n",
+    "    combined_df.to_csv(yaml_config['save_path']['training_prediction_path'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "''"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "yaml_config['evaluation_path']['training_prediction_path']"
    ]
   },
   {
@@ -651,7 +730,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.13 ('ml_pytorch')",
+   "display_name": "Python 3.9.12 ('ml_pytorch')",
    "language": "python",
    "name": "python3"
   },
@@ -665,12 +744,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.12"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "631fa29ff452e796f5703a13b9a25aaedc38e1bbca43d17166395e7a7dc8b7e5"
+    "hash": "bc289c9585466324d6bcd715c701435d361dd4760f0e3d7325b29a75549769c1"
    }
   }
  },
