Added changes to notebook

--- a/cluster-trace-gpu-v2020/prediction/lstm_general_prediction.ipynb
+++ b/cluster-trace-gpu-v2020/prediction/lstm_general_prediction.ipynb
@@ -59,7 +59,7 @@
     "from yaml.loader import SafeLoader\n",
     "\n",
     "# Open the file and load the file\n",
-    "with open('./model_configs/utilization_no_tasks.yaml') as f:\n",
+    "with open('./model_configs/tasks_vs_no_tasks/utilization_no_tasks.yaml') as f:\n",
     "    yaml_config = yaml.load(f, Loader=SafeLoader)\n",
     "    print(yaml_config)"
    ]
@@ -635,7 +635,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test = test_set.X_scaler.convert_tensor_to_df(test_set.X)"
+    "plan = X_df.cpu()\n",
+    "plan_test_df = test_set.X_scaler.convert_tensor_to_df(plan)\n",
+    "plan_test_df = test_set.X_scaler.inverse_standardize_df(plan_test_df)\n",
+    "plan_test_df = plan_df[['plan_cpu']]"
    ]
   },
   {
@@ -644,40 +647,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test = test_set.X_scaler.inverse_standardize_df(test)\n",
-    "test = test[['plan_cpu']]\n",
-    "test"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "actual_data_df['plan_cpu'] = test['plan_cpu']\n",
-    "actual_data_df.iloc[0:100].plot.line()\n",
-    "actual_data_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "prediction_df['plan_cpu'] = test['plan_cpu']\n",
-    "prediction_df.iloc[0:100].plot.line()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bla = pd.merge(actual_data_df, prediction_df, left_index=True, right_index=True)\n",
-    "bla.drop(columns=['plan_cpu_y'], inplace=True)\n"
+    "combined_test_df = pd.merge(actual_data_df, prediction_df, left_index=True, right_index=True)\n",
+    "# combined_df.rename()\n",
+    "combined_test_df['plan_cpu'] = plan_test_df \n",
+    "\n",
+    "combined_test_df = combined_test_df.rename(columns={'cpu_usage_x': 'actual cpu usage', 'cpu_usage_y': 'predicted cpu usage', 'plan_cpu': 'allocated cpu'})\n",
+    "\n",
+    "if yaml_config['evaluation_path']['save_to_file']:\n",
+    "    combined_test_df.to_csv(yaml_config['save_path']['test_prediction_path'])"
    ]
   },
   {
