Updated lstm_general notebook

--- a/cluster-trace-gpu-v2020/prediction/lstm_general_prediction.ipynb
+++ b/cluster-trace-gpu-v2020/prediction/lstm_general_prediction.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/macbook/opt/miniconda3/envs/ml_pytorch/lib/python3.9/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from lstm_models import LSTM, UtilizationLSTM\n",
     "from gpu_dataloader import ForecastDataset, UtilizationDataset\n",
@@ -43,17 +34,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'dataset': {'small_df': True, 'include_tasks': False, 'batch_size': 500}, 'model': {'name': 'Utilization LSTM Model without Tasks', 'num_epochs': 100, 'learning_rate': 0.0001, 'hidden_size': 3000, 'num_layers': 2, 'scheduler': {'patience': 50, 'factor': 0.5, 'min_lr': 1e-05, 'eps': 1e-09}}, 'save_path': {'save_to_file': False, 'training_prediction_path': '', 'test_prediction_path': ''}}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import yaml\n",
     "from yaml.loader import SafeLoader\n",
@@ -66,27 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'small_df': True, 'include_tasks': False, 'batch_size': 500}"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "yaml_config['dataset']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,18 +60,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "dataset = UtilizationDataset(small_df=small_df, include_tasks=include_tasks)\n",
     "test_set = UtilizationDataset(is_training=False, small_df=small_df, include_tasks=include_tasks)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,8 +281,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "loss_df = pd.DataFrame(data=loss_progression)\n",
-    "loss_df.plot.line()"
+    "# loss_df = pd.DataFrame(data=loss_progression)\n",
+    "# loss_df.plot.line()"
    ]
   },
   {
@@ -406,7 +368,7 @@
     "plan = X_df.cpu()\n",
     "plan_df = dataset.X_scaler.convert_tensor_to_df(plan)\n",
     "plan_df = dataset.X_scaler.inverse_standardize_df(plan_df)\n",
-    "plan_df = plan_df[['plan_cpu']]"
+    "plan_df = plan_df[['plan_cpu', 'plan_mem']]"
    ]
   },
   {
@@ -415,58 +377,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "combined_df = pd.merge(actual_data_df, prediction_df, left_index=True, right_index=True)\n",
-    "# combined_df.rename()\n",
-    "combined_df['plan_cpu'] = plan_df\n",
     "\n",
-    "combined_df = combined_df.rename(columns={'cpu_usage_x': 'actual cpu usage', 'cpu_usage_y': 'predicted cpu usage', 'plan_cpu': 'allocated cpu'})\n",
-    "\n",
-    "if yaml_config['evaluation_path']['save_to_file']:\n",
-    "    combined_df.to_csv(yaml_config['save_path']['training_prediction_path'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "''"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "yaml_config['evaluation_path']['training_prediction_path']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cycler = plt.cycler(linestyle=['-', '-.', '--', '-', '--', '-', '--'],\n",
-    "                    color=['green', 'blue', 'orange', 'orange', 'orange', 'green', 'green'],\n",
-    ")\n",
-    "\n",
-    "\n",
-    "\n",
-    "# combined_df.iloc[250:500].plot(ax=ax, figsize=(30, 25), linewidth=2)\n",
-    "\n",
-    "\n",
-    "# step: int = 1000\n",
-    "# for i in range(0, len(combined_df), step):\n",
-    "#     fig, ax = plt.subplots()\n",
-    "#     ax.set_prop_cycle(cycler)\n",
-    "#     # combined_df.iloc[i:i+step].plot.line(figsize=(30, 20), linewidth=3, ax=ax)\n",
-    "#     plot = combined_df.iloc[i:i+step].plot\n",
-    "#     plot.line(figsize=(30, 20), linewidth=3, ax=ax)"
+    "rename_columns_dict: dict = {\n",
+    "    'cpu_usage_x': 'actual cpu usage', \n",
+    "    'cpu_usage_y': 'predicted cpu usage', \n",
+    "    'plan_cpu': 'allocated cpu',\n",
+    "    'avg_mem_x': 'actual mem usage',\n",
+    "    'avg_mem_y': 'predicted mem usage',\n",
+    "    'plan_mem': 'allocated mem'\n",
+    "    }"
    ]
   },
   {
@@ -512,6 +431,25 @@
     "\n",
     "if INCLUDE_WANDB:\n",
     "    wandb.summary[mae_key] = mae_result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "combined_df = pd.merge(actual_data_df, prediction_df, left_index=True, right_index=True)\n",
+    "# combined_df.rename()\n",
+    "combined_df[['plan_cpu', 'plan_mem']] = plan_df\n",
+    "\n",
+    "combined_df = combined_df.rename(columns=rename_columns_dict)\n",
+    "\n",
+    "combined_df['rmse'] = rmse_result\n",
+    "combined_df['mae'] = mae_result\n",
+    "\n",
+    "if yaml_config['evaluation_path']['save_to_file']:\n",
+    "    combined_df.to_csv(yaml_config['evaluation_path']['training_prediction_path'])"
    ]
   },
   {
@@ -568,17 +506,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for idx in range(0, len(label_columns)):\n",
-    "    plot_column(actual_values=actual_data_df, predicted_values=prediction_df, column_number=idx)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# plot_column(actual_values=actual_data_df[7000:8000], predicted_values=prediction_df[7000:8000], column_number=0)"
+    "# for idx in range(0, len(label_columns)):\n",
+    "#     plot_column(actual_values=actual_data_df, predicted_values=prediction_df, column_number=idx)"
    ]
   },
   {
@@ -588,15 +517,6 @@
     "## Test Set Analysis\n",
     "\n",
     "Below, the test set will be loaded and the model evaluated with it to see the actual performance."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# test_dataset = GPUDataset(is_training=False, small_df=True, batch_size=batch_size)"
    ]
   },
   {
@@ -638,33 +558,7 @@
     "plan = X_df.cpu()\n",
     "plan_test_df = test_set.X_scaler.convert_tensor_to_df(plan)\n",
     "plan_test_df = test_set.X_scaler.inverse_standardize_df(plan_test_df)\n",
-    "plan_test_df = plan_df[['plan_cpu']]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "combined_test_df = pd.merge(actual_data_df, prediction_df, left_index=True, right_index=True)\n",
-    "# combined_df.rename()\n",
-    "combined_test_df['plan_cpu'] = plan_test_df \n",
-    "\n",
-    "combined_test_df = combined_test_df.rename(columns={'cpu_usage_x': 'actual cpu usage', 'cpu_usage_y': 'predicted cpu usage', 'plan_cpu': 'allocated cpu'})\n",
-    "\n",
-    "if yaml_config['evaluation_path']['save_to_file']:\n",
-    "    combined_test_df.to_csv(yaml_config['save_path']['test_prediction_path'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "bla.iloc[50:100].plot.line(figsize=(25,15))"
+    "plan_test_df = plan_df[['plan_cpu', 'plan_mem']]"
    ]
   },
   {
@@ -700,8 +594,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for idx in range(0, len(label_columns)):\n",
-    "    plot_column(actual_values=actual_data_df, predicted_values=prediction_df, column_number=idx)\n"
+    "combined_test_df = pd.merge(actual_data_df, prediction_df, left_index=True, right_index=True)\n",
+    "# combined_df.rename()\n",
+    "combined_test_df[['plan_cpu', 'plan_mem']] = plan_test_df \n",
+    "\n",
+    "combined_test_df = combined_test_df.rename(columns=rename_columns_dict)\n",
+    "\n",
+    "combined_test_df['rmse'] = rmse_result\n",
+    "combined_test_df['mae'] = mae_result\n",
+    "\n",
+    "if yaml_config['evaluation_path']['save_to_file']:\n",
+    "    combined_test_df.to_csv(yaml_config['evaluation_path']['test_prediction_path'])"
    ]
   }
  ],
