Added functionality and refactored training loop

--- a/cluster-trace-gpu-v2020/prediction/lstm_machine_prediction.ipynb
+++ b/cluster-trace-gpu-v2020/prediction/lstm_machine_prediction.ipynb
@@ -2,25 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/macbook/opt/miniconda3/envs/ml_pytorch/lib/python3.9/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "cpu\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import time\n",
     "\n",
@@ -51,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,20 +45,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(2000, True, False)"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "batch_size: int = yaml_config['dataset']['batch_size']\n",
     "small_df: bool = yaml_config['dataset']['small_df']\n",
@@ -84,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,17 +67,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "cpu\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "num_epochs: int = yaml_config['model']['num_epochs']\n",
     "learning_rate: float = yaml_config['model']['learning_rate']\n",
@@ -217,12 +182,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def convert_datasets_to_data_loaders(data: MachineDatasetContainer, shuffle: bool = False, num_workers: int = 5) -> List[DataLoader]:\n",
+    "    data_loaders: List[DataLoader] = list()\n",
+    "    for dataset in data.dataset_list:\n",
+    "        data_loaders.append(\n",
+    "            DataLoader(dataset, batch_size, shuffle=shuffle, num_workers=num_workers)\n",
+    "        )\n",
+    "        \n",
+    "    return data_loaders\n",
     "\n",
-    "train_data_loaders: List[DataLoader] = list()\n",
-    "for dataset in dataset.dataset_list:\n",
-    "    train_data_loaders.append(\n",
-    "        DataLoader(dataset, batch_size, shuffle=False, num_workers=5)\n",
-    "    )"
+    "train_data_loaders: List[DataLoader] = convert_datasets_to_data_loaders(dataset)\n",
+    "test_data_loaders: List[DataLoader] = convert_datasets_to_data_loaders(test_dataset)"
    ]
   },
   {
@@ -244,55 +214,70 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for epoch in (pbar := tqdm(range(0, num_epochs), desc=f'Training Loop (0) -- Loss: {loss_val}')):\n",
+    "def train_loader_training_loop(train_loader: DataLoader) -> float:\n",
+    "    predictions, labels, loss = 0, 0, 0\n",
     "    \n",
-    "    for train_loader in train_data_loaders:\n",
-    "        predictions, labels, loss = 0, 0, 0\n",
+    "    for _, (inputs, labels) in enumerate(train_loader):\n",
+    "        # send input and label to device\n",
+    "        inputs, labels = inputs.to(device), labels.to(device)\n",
     "        \n",
-    "        for _, (inputs, labels) in enumerate(train_loader):\n",
-    "            # send input and label to device\n",
-    "            inputs, labels = inputs.to(device), labels.to(device)\n",
-    "            \n",
-    "            # forward input to model\n",
-    "            predictions = model(inputs).to(device)\n",
+    "        # forward input to model\n",
+    "        predictions = model(inputs).to(device)\n",
     "\n",
-    "            optimizer.zero_grad()\n",
-    "            loss = criterion(predictions, labels)\n",
-    "            # backward propagation\n",
-    "            loss.backward()\n",
-    "            # update weights\n",
-    "            optimizer.step()\n",
-    "            \n",
-    "            \n",
-    "        if INCLUDE_WANDB:\n",
-    "            log_training_metrics(predictions, labels, loss)\n",
-    "        loss_val = loss.item()\n",
-    "        loss_progression.append(loss_val)\n",
-    "        pbar.set_description(f'Training Loop ({epoch + 1}) -- Loss: {loss_val:.5f}')\n",
+    "        optimizer.zero_grad()\n",
+    "        loss = criterion(predictions, labels)\n",
+    "        # backward propagation\n",
+    "        loss.backward()\n",
+    "        # update weights\n",
+    "        optimizer.step()\n",
     "        \n",
-    "        with torch.no_grad():\n",
-    "            val_pred = model(test_dataset.X.to(device))\n",
-    "            val_loss = criterion(val_pred, test_dataset.y.to(device))\n",
-    "            scheduler.step(val_loss)"
+    "    if INCLUDE_WANDB:\n",
+    "        log_training_metrics(predictions, labels, loss)\n",
+    "        \n",
+    "    return loss.item()\n",
+    "            "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'time' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m/Users/macbook/Development/alibaba_clusterdata/cluster-trace-gpu-v2020/prediction/lstm_machine_prediction.ipynb Cell 14\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/macbook/Development/alibaba_clusterdata/cluster-trace-gpu-v2020/prediction/lstm_machine_prediction.ipynb#X16sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m current_time \u001b[39m=\u001b[39m time\u001b[39m.\u001b[39mctime()\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/macbook/Development/alibaba_clusterdata/cluster-trace-gpu-v2020/prediction/lstm_machine_prediction.ipynb#X16sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m current_time\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'time' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "def validation_loop():\n",
+    "    with torch.no_grad():\n",
+    "        for test_loader in test_data_loaders:\n",
+    "            for _, (inputs, labels) in enumerate(test_loader):\n",
+    "                inputs, labels = inputs.to(device), labels.to(device)\n",
+    "                val_prediction = model(inputs).to(device)\n",
+    "                val_loss = criterion(val_prediction, labels)\n",
+    "                scheduler.step(val_loss)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for epoch in (pbar := tqdm(range(0, 3), desc=f'Training Loop (0) -- Loss: {loss_val}')):\n",
+    "    \n",
+    "    for train_loader in train_data_loaders:\n",
+    "        \n",
+    "        loss_val = train_loader_training_loop(train_loader)\n",
+    "        loss_progression.append(loss_val)\n",
+    "        \n",
+    "        pbar.set_description(f'Training Loop ({epoch + 1}) -- Loss: {loss_val:.5f}')\n",
+    "        \n",
+    "    validation_loop()\n",
+    "                "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "current_time = time.ctime()\n",
     "current_time"
