--- a/cluster-trace-gpu-v2020/prediction/lstm_machine_prediction.ipynb
+++ b/cluster-trace-gpu-v2020/prediction/lstm_machine_prediction.ipynb
@@ -319,9 +319,10 @@
     "    model.eval()\n",
     "    prediction_list: List[pd.DataFrame] = list()\n",
     "    actual_data_list: List[pd.DataFrame] = list()\n",
+    "    plan_data_list: List[pd.DataFrame] = list()\n",
     "    \n",
-    "    for ds in dataset_container.dataset_list:\n",
-    "        X_df = ds.X\n",
+    "    def add_prediction(dataset: MachineDataset, dst: List[pd.DataFrame]):\n",
+    "        X_df = dataset.X\n",
     "        X_df = X_df.to(device)\n",
     "        \n",
     "        pred = model(X_df)\n",
@@ -331,25 +332,66 @@
     "        else: \n",
     "            pred = pred.data.numpy()\n",
     "            \n",
-    "        actual_data = ds.y.data.numpy()\n",
-    "        label_columns = ds.get_label_columns()\n",
+    "        label_columns = dataset.label_columns\n",
     "        \n",
     "        prediction_df = pd.DataFrame(pred, columns=label_columns)\n",
-    "        prediction_df = ds.y_scaler.inverse_normalization_df(prediction_df)\n",
+    "        prediction_df = dataset.y_scaler.inverse_normalization_df(prediction_df)\n",
     "        prediction_list.append(prediction_df)\n",
     "        \n",
+    "    def add_actual_data(dataset: MachineDataset, dst: List[pd.DataFrame]):\n",
+    "        label_columns = dataset.label_columns\n",
+    "        actual_data = dataset.y.data.numpy()\n",
     "        actual_data_df = pd.DataFrame(actual_data, columns=label_columns)\n",
-    "        actual_data_df = ds.y_scaler.inverse_normalization_df(actual_data_df)\n",
+    "        actual_data_df = dataset.y_scaler.inverse_normalization_df(actual_data_df)\n",
     "        actual_data_list.append(actual_data_df)\n",
+    "    \n",
+    "    def add_plan_data(dataset: MachineDataset, dst: List[pd.DataFrame]):\n",
+    "        plan_df = dataset.X.cpu()\n",
+    "        plan_df = dataset.X_scaler.convert_tensor_to_df(plan_df)\n",
+    "        plan_df = dataset.X_scaler.inverse_standardize_df(plan_df)\n",
+    "        plan_df = plan_df[['plan_cpu', 'plan_mem']]\n",
+    "        plan_data_list.append(plan_df)\n",
     "        \n",
+    "    def get_rename_columns() -> dict:\n",
+    "        return {\n",
+    "            'cpu_usage_x': 'actual cpu usage', \n",
+    "            'cpu_usage_y': 'predicted cpu usage', \n",
+    "            'plan_cpu': 'allocated cpu',\n",
+    "            'avg_mem_x': 'actual mem usage',\n",
+    "            'avg_mem_y': 'predicted mem usage',\n",
+    "            'plan_mem': 'allocated mem'\n",
+    "            }\n",
     "        \n",
+    "    def combine_dataframes(pred_df, actual_data_df, plan_df) -> pd.DataFrame:\n",
+    "        combined_df = pd.merge(actual_data_df, prediction_df, left_index=True, right_index=True)\n",
+    "        combined_df[['plan_cpu', 'plan_mem']] = plan_df\n",
+    "        combined_df = combined_df.rename(columns=get_rename_columns())\n",
     "        \n",
+    "        return combined_df\n",
+    "    \n",
+    "    for ds in dataset_container.dataset_list:\n",
+    "        add_prediction(ds, prediction_list)\n",
+    "        add_actual_data(ds, actual_data_list)\n",
+    "        add_plan_data(ds, plan_data_list)\n",
     "        \n",
-    "        \n",
-    "        \n",
-    "        \n",
-    "        \n",
+    "    prediction_df = pd.concat(prediction_list, ignore_index=True)\n",
+    "    actual_data_df = pd.concat(actual_data_list, ignore_index=True)\n",
+    "    plan_df = pd.concat(prediction_list, ignore_index=True)\n",
+    "    \n",
+    "    combined_df = combine_dataframes(prediction_df, actual_data_df, plan_df)\n",
+    "\n",
+    "    if yaml_config['evaluation_path']['save_to_file']:\n",
+    "        combined_df.to_csv(yaml_config['evaluation_path']['training_prediction_path'])        \n",
     "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_combined_df = get_combined_data_df(dataset)"
    ]
   }
  ],
