--- a/cluster-trace-gpu-v2020/prediction/lstm_general_prediction.ipynb
+++ b/cluster-trace-gpu-v2020/prediction/lstm_general_prediction.ipynb
@@ -8,12 +8,10 @@
    "source": [
     "from lstm_models import LSTM, UtilizationLSTM\n",
     "from gpu_dataloader import ForecastDataset, UtilizationDataset\n",
-    "from torch.utils.data import DataLoader, SubsetRandomSampler\n",
+    "from torch.utils.data import DataLoader\n",
     "import torch.nn as nn\n",
     "import torch\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.metrics import mean_squared_error, mean_absolute_error\n",
-    "from sklearn.preprocessing import MinMaxScaler, StandardScaler\n",
+    "from sklearn.metrics import mean_absolute_error\n",
     "\n",
     "# plotting the data\n",
     "import matplotlib.pyplot as plt\n",
@@ -21,15 +19,12 @@
     "import pandas as pd\n",
     "from tqdm import tqdm\n",
     "\n",
-    "import random\n",
-    "\n",
     "from utils import get_device\n",
-    "from loss_classes import RMSELoss\n",
     "\n",
     "import numpy as np\n",
     "%matplotlib inline\n",
     "\n",
-    "from utils import get_device_as_string, get_device, get_rmse, get_mape, get_mae"
+    "from utils import get_device_as_string, get_device, get_rmse, get_mae"
    ]
   },
   {
@@ -153,7 +148,7 @@
     "# mean square error for regression\n",
     "# nn.\n",
     "criterion = nn.MSELoss()\n",
-    "criterion = criterion.to(get_device())\n",
+    "criterion = criterion.to(device)\n",
     "# criterion = RMSELoss()\n",
     "# criterion = criterion.to(device)\n",
     "# optimizer function\n",
