Reduced variable initialization to one line

--- a/cluster-trace-gpu-v2020/prediction/lstm_machine_prediction.ipynb
+++ b/cluster-trace-gpu-v2020/prediction/lstm_machine_prediction.ipynb
@@ -322,9 +322,7 @@
     "    plan_data_list: List[pd.DataFrame] = list()\n",
     "    \n",
     "    def add_prediction(dataset: MachineDataset, dst: List[pd.DataFrame]):\n",
-    "        X_df = dataset.X\n",
-    "        X_df = X_df.to(device)\n",
-    "        \n",
+    "        X_df = dataset.X.to(device)    \n",
     "        pred = model(X_df)\n",
     "        \n",
     "        if torch.has_cuda:\n",
