--- a/cluster-trace-gpu-v2020/prediction/evaluate_paper_lstm.ipynb
+++ b/cluster-trace-gpu-v2020/prediction/evaluate_paper_lstm.ipynb
@@ -16,7 +16,8 @@
     "                                     TimeDistributed)\n",
     "from tensorflow.keras.utils import plot_model\n",
     "\n",
-    "# https://www.tensorflow.org/guide/keras/train_and_evaluate"
+    "# https://www.tensorflow.org/guide/keras/train_and_evaluate\n",
+    "# https://www.tensorflow.org/tutorials/structured_data/feature_columns"
    ]
   },
   {
@@ -158,7 +159,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.4 ('ml_keras')",
+   "display_name": "Python 3.9.12 ('ml_pytorch')",
    "language": "python",
    "name": "python3"
   },
@@ -172,12 +173,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.9.12"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "5ee623084b240fdb767e5eefbde641a9c7dd51d1c28adee199c8336ff607fe76"
+    "hash": "bc289c9585466324d6bcd715c701435d361dd4760f0e3d7325b29a75549769c1"
    }
   }
  },
