--- a/cluster-trace-gpu-v2020/prediction/lstm_machine_prediction.ipynb
+++ b/cluster-trace-gpu-v2020/prediction/lstm_machine_prediction.ipynb
@@ -17,20 +17,14 @@
     "from gpu_dataloader import MachineDatasetContainer, MachineDataset\n",
     "from torch.utils.data import DataLoader\n",
     "\n",
-    "from sklearn.metrics import mean_absolute_error\n",
-    "\n",
-    "# plotting the data\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
     "# used for the dataframes\n",
     "import pandas as pd\n",
-    "import numpy as np\n",
     "from tqdm import tqdm\n",
     "\n",
     "import yaml\n",
     "from yaml.loader import SafeLoader\n",
     "\n",
-    "from utils import get_device_as_string, get_device, get_rmse, get_mae\n"
+    "from utils import get_device, get_rmse, get_mae\n"
    ]
   },
   {
@@ -124,7 +118,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = UtilizationLSTM(num_classes, input_size, hidden_size, num_layers)\n",
+    "model = UtilizationLSTM(num_classes, input_size, 50, num_layers)\n",
     "model.train()\n",
     "\n",
     "if INCLUDE_WANDB:\n",
@@ -202,10 +196,7 @@
    "outputs": [],
    "source": [
     "if torch.has_cuda:\n",
-    "    torch.cuda.empty_cache()\n",
-    "    \n",
-    "loss_val = None\n",
-    "loss_progression: list = list()"
+    "    torch.cuda.empty_cache()"
    ]
   },
   {
@@ -260,7 +251,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for epoch in (pbar := tqdm(range(0, 3), desc=f'Training Loop (0) -- Loss: {loss_val}')):\n",
+    "loss_val = None\n",
+    "loss_progression: list = list()\n",
+    "\n",
+    "for epoch in (pbar := tqdm(range(0, 15), desc=f'Training Loop (0) -- Loss: {loss_val}')):\n",
     "    \n",
     "    for train_loader in train_data_loaders:\n",
     "        \n",
@@ -291,7 +285,7 @@
    "source": [
     "model.eval()\n",
     "\n",
-    "if yaml_config['model']['save_model']:\n",
+    "if yaml_config['model']['save_model'] and False:\n",
     "    model_name = f'models/epochs-{num_epochs}-{current_time}'\n",
     "    torch.save(\n",
     "        {\n",
@@ -315,14 +309,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_combined_data_df(dataset_container: MachineDatasetContainer):\n",
+    "def get_combined_data_df(dataset_container: MachineDatasetContainer, save_to_file: bool = True) -> pd.DataFrame:\n",
     "    model.eval()\n",
     "    prediction_list: List[pd.DataFrame] = list()\n",
     "    actual_data_list: List[pd.DataFrame] = list()\n",
     "    plan_data_list: List[pd.DataFrame] = list()\n",
     "    \n",
     "    def add_prediction(dataset: MachineDataset, dst: List[pd.DataFrame]):\n",
-    "        X_df = dataset.X.to(device)    \n",
+    "        X_df = dataset.X.to(device)\n",
     "        pred = model(X_df)\n",
     "        \n",
     "        if torch.has_cuda:\n",
@@ -361,7 +355,7 @@
     "            }\n",
     "        \n",
     "    def combine_dataframes(pred_df, actual_data_df, plan_df) -> pd.DataFrame:\n",
-    "        combined_df = pd.merge(actual_data_df, prediction_df, left_index=True, right_index=True)\n",
+    "        combined_df = pd.merge(actual_data_df, pred_df, left_index=True, right_index=True)\n",
     "        combined_df[['plan_cpu', 'plan_mem']] = plan_df\n",
     "        combined_df = combined_df.rename(columns=get_rename_columns())\n",
     "        \n",
@@ -374,12 +368,16 @@
     "        \n",
     "    prediction_df = pd.concat(prediction_list, ignore_index=True)\n",
     "    actual_data_df = pd.concat(actual_data_list, ignore_index=True)\n",
-    "    plan_df = pd.concat(prediction_list, ignore_index=True)\n",
+    "    plan_df = pd.concat(plan_data_list, ignore_index=True)\n",
     "    \n",
     "    combined_df = combine_dataframes(prediction_df, actual_data_df, plan_df)\n",
     "\n",
-    "    if yaml_config['evaluation_path']['save_to_file']:\n",
-    "        combined_df.to_csv(yaml_config['evaluation_path']['training_prediction_path'])        \n",
+    "    if save_to_file and yaml_config['evaluation_path']['save_to_file']:\n",
+    "        combined_df.to_csv(yaml_config['evaluation_path']['training_prediction_path'])   \n",
+    "        \n",
+    "    del prediction_list, actual_data_list, plan_data_list\n",
+    "    \n",
+    "    return combined_df\n",
     "        "
    ]
   },
@@ -390,6 +388,15 @@
    "outputs": [],
    "source": [
     "train_combined_df = get_combined_data_df(dataset)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_combined_df.head(5)"
    ]
   }
  ],
