Refactoring of gpu_dataloader.py

--- a/cluster-trace-gpu-v2020/prediction/lstm_machine_prediction.ipynb
+++ b/cluster-trace-gpu-v2020/prediction/lstm_machine_prediction.ipynb
@@ -118,7 +118,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = UtilizationLSTM(num_classes, input_size, 50, num_layers)\n",
+    "model = UtilizationLSTM(num_classes, input_size, hidden_size, num_layers)\n",
     "model.train()\n",
     "\n",
     "if INCLUDE_WANDB:\n",
